--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
     flex-direction: row;
 }
 
-.container img {
+.logo {
     width: 80px;
-    height: auto;
+    height: 80px;
     margin: 0 1rem;
 }
